[package]
name = "rust-mockito-example"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3", features = ["async-await"] }
mockito = "0.23.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

